# boring-derive

./: Cargo.toml  README.md
boring_derive_macro/: Cargo.toml
boring_derive_macro/src/: builder_derive.rs  from_derive.rs  lib.rs
boring_derive_macro/src/core/: attr.rs  container.rs  context.rs  data.rs
src/: builder_derive.rs  from_derive.rs  lib.rs  main.rs
src/core/: attr.rs  container.rs  data.rs  mod.rs  symbol.rs
tests/: test.rs
tests/builder/: bad_attr.rs  bad_attr.stderr  enum.rs  enum.stderr  example.rs  newtype.rs  newtype.stderr  no_into.rs  no_into.stderr  prefix.rs  prefix_non_string.rs  prefix_non_string.stderr  rename.rs  rename_non_string.rs  rename_non_string.stderr  skip.rs  skip.stderr  struct.rs  suffix.rs  suffix_non_string.rs  suffix_non_string.stderr  tuple.rs  tuple.stderr  unit.rs  unit.stderr
tests/from/: bad_attr.rs  bad_attr.stderr  enum.rs  newtype.rs  skip.rs  skip.stderr  struct.rs  tuple.rs  unit.rs
